# quafe-etk

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  aclocal.m4  cmake_install.cmake  config.h.in  configure  configure.ac  doxyfile.in
data/: 431008_apikey.xml  CMakeLists.txt  Makefile.am  Makefile.in  default_config.cfg  include_settings.xml  quafe-etk.desktop  quafe-etk.desktop.in  quafe-etk.run.in
data/ui/: applicationwindow.glade  pluginbutton.css  preferences.glade  quafe-character.glade
docs/: Install.md  Readme.md  Reference.md  WritingPlugins.md  WritingPlugins_partii.md  docstruct.h
libs/eapi/: .cproject  .project  CMakeLists.txt  apiinterface.cc  apiinterface.h  apiobject.h  basicapi.cc  basicapi.h  eapi-config.h  eapi-config.h.in  eapi-logging.h  eapi.cc  eapi.h  eapi_fetcher.cc  eapi_fetcher.h  exception.cc  exception.h  keyinfo.cc  keyinfo.h  request.cc  request.h  sheetlist.h  singleton.h  types.h
libs/eapi/sheets/: charactersheet.cc  charactersheet.h  keyinfo.cc  keyinfo.h  sheets.h
libs/pugixml/: CMakeLists.txt  cmake_install.cmake
plugins/: CMakeLists.txt
plugins/quafe-character/: .cproject  .project  CMakeLists.txt  characternotebook.cc  characternotebook.h  characterpage.cc  characterpage.h  charinfo.cc  charinfo.h  skilltraining-config.h.in  skilltraining.cc  skilltraining.h
plugins/quafe-fitting/: .cproject  .project
plugins/quafe-items/: items.cc
plugins/quafe-journal/: .cproject  .project
plugins/quafe-raw/: .cproject  .project
plugins/quafe-skilltraining/: .cproject  .project  CMakeLists.txt  skilltraining.cc  skilltraining.h
quafe/: .cproject  .project  CMakeLists.txt  application.cc  application.h  main.cc  pluginmanager.cc  pluginmanager.h  preferences.cc  preferences.h  preferences_translator.h  preferences_translator.hpp  quafe-config.h.in  quafe-etk.h  quafe-etk.h.in  quafe-logging.h  settings.cc  settings.h  singleton.h
quafe-bin/: .cproject  .project  CMakeLists.txt  Makefile.am  Makefile.in  application.cc  application.h  cmake_install.cmake  log.cc  log.h  main.cc  preferences.cc  preferences.h  quafe-etk.h  quafe-etk.h.in  utility.cc  utility.h
quafe-bin/include/: pluginbase.h  singleton.h
quafe-bin/plugin/: characterbase.h  pluginbase.h
quafe-bin/source/: application.cc  application.h  log.cc  main.cc
quafe-bin/source/plugin/: apibase.h  characterbase.h  pluginbase.h
quafe-bin/source/ui/: modulebar.cc  modulebar.h  window.cc  window.h
quafe-bin/ui/: dialogs.cc  dialogs.h  modulebar.cc  modulebar.h  window.cc  window.h  window_preferences.cc  window_preferences.h
quafe-character/: .cproject  .project  charinfo.cc  charinfo.h
quafe-character/source/: character.cc  character.h
quafe-charinfo/: .cproject  .project
quafe-charinfo/source/: test.h
quafe-etk/: .cproject  .project
quafe-etk/source/: main.cc
quafe-fitting/: .cproject  .project  fitting.cc  fitting.h
quafe-fitting/source/: fitting.h
quafe-items/: .cproject  .project  items.cc  items.h
quafe-items/source/: items.h
quafe-skilltraining/: .cproject  .project  CMakeLists.txt  Makefile.am  Makefile.in  cmake_install.cmake  skilltraining.cc  skilltraining.h
quafe/include/: apibase.h  pluginbase.h  singleton.h
quafe/plugins/: plugin-config.h.in  pluginbase.cc  pluginbase.h  plugininterface.h  pluginutils.cc  pluginutils.h  pluginwidget.cc  pluginwidget.h
quafe/ui/: applicationwindow.cc  applicationwindow.h  dialog_preferences.cc  dialog_preferences.h  dialogs.cc  dialogs.h  modulebar.cc  modulebar.h  pluginbar.cc  pluginbar.h  pluginbutton.cc  pluginbutton.h  preferences_dialog.cc  preferences_dialog.h  window.cc  window.h
quafe/utils/: exception.cc  exception.h
tests/: CMakeLists.txt
tests/test-eapi/: .cproject  .project  CMakeLists.txt  cli-test.cc  eapi_window.h  gui-test.cc  main.cc
tests/test_api_fetcher/: .cproject  .project  CMakeLists.txt  api_fetcher.cc
tests/test_eapi/: .cproject  CMakeLists.txt  main.cc
tests/valgrind-supp/: .cproject  .project  CMakeLists.txt  main.cc  valgrind-supp
