bin_PROGRAMS=quafe-bin
quafe_bin_CPPFLAGS = $(gtkmm_CFLAGS)
quafe_bin_LDFLAGS = $(gtkmm_LIBS)

quafe_bin_SOURCES = \
	main.cc quafe-etk.h \
	application.cc application.h \
	log.cc log.h \
	ui/modulebar.cc ui/modulebar.h \
	ui/window.cc ui/window.h

noinst_HEADERS = plugin/pluginbase.h plugin/apibase.h plugin/characterbase.h


