PROJECT (eapi CXX)

SET (EAPI_NAME "eapi")
SET (EAPI_VERSION_MAJOR 0)
SET (EAPI_VERSION_MINOR 1)
SET (EAPI_VERSION_PATCH 0+devel)
SET (EAPI_PREFIX ${CMAKE_INSTALL_PREFIX})
SET (EAPI_BUILD_RELEASE 1)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET (EAPI_BUILD_RELEASE 0)
endif(CMAKE_BUILD_TYPE STREQUAL "Debug")

CONFIGURE_FILE (eapi-config.h.in eapi-config.h)

SET (EAPI_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/.." PARENT_SCOPE)
SET (EAPI_LIBRARY_DIRS "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
SET (EAPI_LIBRARIES "libeapi.a" PARENT_SCOPE)

INCLUDE_DIRECTORIES (
	.
	${GLIBMM_INCLUDE_DIRS}
	${GIOMM_INCLUDE_DIRS}
	${Boost_INCLUDE_DIR}
	${PUGIXML_INCLUDE_DIRS}
)

LINK_DIRECTORIES (
	${GLIBMM_LIBRARY_DIRS}
	${GIOMM_LIBRARY_DIRS} 
	${Boost_LIBRARY_DIR}
	${PUGIXML_LIBRARY_DIRS}
)

SET (eapi_SOURCES
	eapi.cc request.cc exception.cc basicapi.cc 
	sheets/keyinfo.cc sheets/charactersheet.cc
)

ADD_DEFINITIONS(-DEAPI_BUILD_STATIC)
ADD_LIBRARY (eapi SHARED ${eapi_SOURCES}) 
